# new_matlabstuff

./: CMakeLists.txt
skml2/: cross_signal.c  cross_signal.mexw64  hw2_skml.slx  hw2_skml.slx.autosave  three_phase.c  three_phase.mexw64
skml_tugas4/: RFOC.c  pmsm.c  pmsm.mexw64  pmsm_model.slx  sp_ctrl.c  sp_ctrl.mexw64
